Fixing reading lists and some clipping

--- a/UI/Web/src/app/app.component.scss
+++ b/UI/Web/src/app/app.component.scss
@@ -11,7 +11,6 @@
     overflow-x: hidden;
     height: calc(var(--vh)* 100 - var(--nav-offset));
     width: 100%;
-    padding-right: 10px;
 
     &::-webkit-scrollbar {
         background-color: transparent;  /*make scrollbar space invisible */
